test/modules/lydia/accessOfOutsideFunctionNoBleed2.good
accessOfOutsideFunctionNoBleed2.chpl:16: In function 'main':
accessOfOutsideFunctionNoBleed2.chpl:18: error: unresolved call 'b(3)'
accessOfOutsideFunctionNoBleed2.chpl:18: note: because no functions named b found in scope
